--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,9 @@ jobs:
       - run: sudo pnpm install --no-cache
       - run: sudo pnpm build --no-cache
   deploy-to-s3:
-    machine:
-      image: circleci/classic:latest
+    docker:
+      # replace with your preferred image
+      - image: cimg/base:stable
     steps:
       - checkout
       - aws-s3/copy:
