--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - aws-s3/sync:
           aws-access-key-id: AWS_KEY_ID
           aws-secret-access-key: AWS_KEY_VALUE
-          to: 's3://turbo-micro-fe-bucket'
+          to: 's3://turbo-micro-fe-bucket/remote-app/dist'
           install-aws-cli: true
           from: apps/remote-app/dist/
 workflows:
