--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,10 @@ jobs:
       - run: sudo pnpm install --no-cache
       - run: sudo pnpm build --no-cache
       - persist_to_workspace:
-        root: ~/
-        paths:
-          - project/build
+          root: ~/
+          paths:
+            - project/build
+      - run: ls
   deploy-to-s3:
     docker:
       # replace with your preferred image
@@ -22,7 +23,7 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-        at: ~/
+          at: ~/
       - aws-s3/sync:
           aws-access-key-id: AWS_KEY_ID
           aws-secret-access-key: AWS_KEY_VALUE
