--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,6 @@ jobs:
   test-and-build:
     executor:
       name: node/default
-    working_directory: ~/project
 
     steps:
       - checkout
@@ -16,7 +15,7 @@ jobs:
       - run: sudo pnpm build --no-cache
       - run: ls
       - persist_to_workspace:
-          root: final
+          root: ~/final
           paths:
             - apps/remote-app/dist
   deploy-to-s3:
@@ -26,13 +25,13 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: ~/project/final
+          at: ~/
       - aws-s3/sync:
           aws-access-key-id: AWS_KEY_ID
           aws-secret-access-key: AWS_KEY_VALUE
           to: 's3://turbo-micro-fe-bucket/remote-app/dist'
           install-aws-cli: true
-          from: ~/project/final/apps/remote-app/dist
+          from: apps/remote-app/dist
 workflows:
   build-and-deploy:
     jobs:
