--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run: sudo pnpm build --no-cache
       - run: ls
       - persist_to_workspace:
-          root: ~/final
+          root: ~/
           paths:
             - apps/remote-app/dist
   deploy-to-s3:
