--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,9 @@ jobs:
       - run: sudo pnpm build --no-cache
       - run: ls
       - persist_to_workspace:
-          root: ~/
+          root: /apps
           paths:
-            - apps/remote-app/dist
+            - remote-app/dist
   deploy-to-s3:
     docker:
       # replace with your preferred image
@@ -25,13 +25,13 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: ~/
+          at: /apps
       - aws-s3/sync:
           aws-access-key-id: AWS_KEY_ID
           aws-secret-access-key: AWS_KEY_VALUE
           to: 's3://turbo-micro-fe-bucket/remote-app/dist'
           install-aws-cli: true
-          from: apps/remote-app/dist
+          from: remote-app/dist
 workflows:
   build-and-deploy:
     jobs:
