--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
           root: apps
           paths:
             - remote-app/dist
+            - host-app/dist
   deploy-to-s3:
     docker:
       # replace with your preferred image
@@ -32,6 +33,12 @@ jobs:
           to: 's3://turbo-micro-fe-bucket/remote-app/dist'
           install-aws-cli: true
           from: apps/remote-app/dist
+      - aws-s3/sync:
+          aws-access-key-id: AWS_KEY_ID
+          aws-secret-access-key: AWS_KEY_VALUE
+          to: 's3://turbo-micro-fe-bucket/host-app/dist'
+          install-aws-cli: true
+          from: apps/host-app/dist
 workflows:
   build-and-deploy:
     jobs:
